Fixed media query. Also fixed font size for better rendering on mobile.

--- a/static/css/objects.css
+++ b/static/css/objects.css
@@ -146,9 +146,6 @@
   width: 80%;
   margin: 2.5em 0 0.5em 0;
 }
-#circularheader .button {
-  margin-top: 8em;
-}
 
 .masthead-home {
   background-image: url(https://images.hasgeek.com/embed/file/b78ecfd5c4ad4cadbcef84e09b3d8f1f?size=1296x768);
