--- a/static/css/typography.css
+++ b/static/css/typography.css
@@ -52,6 +52,8 @@ html                    { font-size: 16px;     line-height: 1.5; }
     html                { font-size: 24px; }
 }
 
+@media (max-width: 480px) { .regular { font-size: 1rem; line-height: 1.50; } }
+
 /*  Helpers  */
 abbr {
     font-size: 0.9em;
